--- a/src/app/advert/advert.component.html
+++ b/src/app/advert/advert.component.html
@@ -15,9 +15,8 @@
     <div class="card-body">
       <h4 class="card-title">My Advert List</h4>
 
-      <button type="button" id="add-advert" routerLink="/addAdvert" class="btn btn-inverse-success btn-fw">Add New
+      <button style="margin-bottom: 15px;" type="button" id="add-advert" routerLink="/addAdvert" class="btn btn-inverse-success btn-fw">Add New
         Advert</button>
-        <br>
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
