feat: create update account component

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,6 +26,10 @@
             <i class="mdi mdi-logout mr-2 text-primary"></i>
             Signout
           </a>
+          <a class="dropdown-item" routerLink="/updateAccount">
+            <i class="mdi mdi-logout mr-2 text-primary"></i>
+            Update Accaount
+          </a>
         </div>
       </li>
 
