feat: added update account api connection

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -27,7 +27,7 @@
             Signout
           </a>
           <a class="dropdown-item" routerLink="/updateAccount">
-            <i class="mdi mdi-logout mr-2 text-primary"></i>
+            <i class="mdi mdi-account-convert"></i>
             Update Accaount
           </a>
         </div>
