--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
           <span class="login-status online"></span> <!--change to offline or busy as needed-->
         </div>
         <div class="nav-profile-text">
-          <span class="font-weight-bold mb-2">{{name}}</span>
+          <span class="font-weight-bold mb-2">{{name}} {{surname}}</span>
         </div>
         <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
       </a>
@@ -16,6 +16,12 @@
       <a class="nav-link" routerLink="/dashboard" routerLinkActive #dashboard="routerLinkActive">
         <span class="menu-title">Dashboard</span>
         <i class="mdi mdi-home menu-icon"></i>
+      </a>
+    </li>
+    <li class="nav-item" [ngClass]="{ 'active': account.isActive }">
+      <a class="nav-link" routerLink="/updateAccount" routerLinkActive #account="routerLinkActive">
+        <span class="menu-title">My Account</span>
+        <i class="mdi mdi mdi-account menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': advert.isActive }">
