--- a/src/app/advert-detail/advert-detail.component.html
+++ b/src/app/advert-detail/advert-detail.component.html
@@ -7,19 +7,19 @@
     </ol>
   </nav>
 </div>
-<div class="col-12 grid-margin stretch-card">
+<div class="grid-margin stretch-card">
   <div class="card">
     <div class="card-body ">
       <h2 style="text-align: center;" class="card-title">
         {{response.data.advertisementTitle}}</h2>
       <div class=row style="margin-bottom: 0px;">
-        <div class="col-lg-11">
+        <div class="col-lg-10">
           <p style="text-align: left;margin: 0px;">{{response.data.advEntryDate | date:'medium'}}</p>
         </div>
-        <div class="col-lg-1" [ngSwitch]="response.data.status">
-          <div style="text-align: center; font-size: 14px;" class="badge badge-pill badge-success" *ngSwitchCase="0">Waiting</div>
-          <div style="text-align: center;font-size: 14px;" class="badge badge-pill badge-info" *ngSwitchCase="1">Completing</div>
-          <div style="text-align: center; font-size: 14px;" class="badge badge-pill badge-danger" *ngSwitchCase="2">Needs More</div>
+        <div class="col-lg-2" [ngSwitch]="response.data.status">
+          <div style="float: right;font-size: 14px;" class="badge badge-pill badge-success" *ngSwitchCase="0">Waiting</div>
+          <div style="float: right;font-size: 14px;" class="badge badge-pill badge-info" *ngSwitchCase="1">Completing</div>
+          <div style="float: right; font-size: 14px;" class="badge badge-pill badge-danger" *ngSwitchCase="2">Needs More</div>
         </div>
       </div>
       <hr>
@@ -32,7 +32,7 @@
         </div>
         <br>
         <div class="row" style="justify-content: center;">
-          <div style="width: 91%; text-align: left;" class="card">
+          <div style="width: 100%; text-align: left;" class="card">
             <div style=" border: 1px solid gray;
             border-radius: 5px;" class="card-body">
               <b>
@@ -43,9 +43,9 @@
           </div>
         </div>
         <br>
-        <div class="row" style="justify-content: center;margin-left: 5%;">
-          <div class="col">
-            <div class="card">
+        <div class="row" style="justify-content: center;">
+          <div class="col-lg-4" style="margin-top: 10px;">
+            <div class="card"  style="width: 91%;" >
               <div style=" border: 1px solid gray;
               border-radius: 5px;" class="card-body">
                 <b>
@@ -57,8 +57,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
+          <div class="col-lg-4" style="margin-top: 10px;">
+            <div class="card" style="width: 91%;">
               <div style=" border: 1px solid gray;
               border-radius: 5px;" class="card-body">
                 <b>
@@ -71,8 +71,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
+          <div class="col-lg-4" style="margin-top: 10px;">
+            <div class="card" style="width: 91%;">
               <div style=" border: 1px solid gray;
               border-radius: 5px;" class="card-body">
                 <b>
@@ -93,7 +93,7 @@
 
 <br>
 
-<div class="col-12 grid-margin stretch-card">
+<div class="grid-margin stretch-card">
   <div style="justify-content: left;" class="card">
     <div style="justify-content: left;" class="card-body ">
       <h2 style="text-align: center;" class="card-title">
@@ -116,33 +116,32 @@
             </div>
           </div>
         </div>
-          <div *ngFor="let comment of response.data.comments; let index =  index" class="new_comment" id='{{index}}'>
-            <ul class="user_comment">
-              <div class="user_avatar">
-                <img src="https://img.icons8.com/bubbles/2x/user-male.png">
-              </div>
-              <div class="comment_body">
-                <p>{{comment.comment}}</p>
-              </div>
-              <div class="comment_toolbar">
-                <div class="comment_details">
-                  <ul>
-
-                    <li><i class="fa fa-calendar"></i> {{comment.date}}</li>
-                    <li><i class="fa fa-pencil"></i> <span class="user">{{comment.personName}}
-                        {{comment.personLastName}}</span></li>
-                  </ul>
-                </div>
-                <div class="comment_tools">
-                  <ul>
-                    <li><i (click)="openSmallModal(smallModalContent,comment.commentID) " [hidden]="comment.isDeletable == false" class="fa fa-remove"></i>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </ul>
+      </div>
+      <div *ngFor="let comment of response.data.comments; let index =  index" class="new_comment" id='{{index}}'>
+        <ul class="user_comment">
+          <div class="user_avatar">
+            <img src="https://img.icons8.com/bubbles/2x/user-male.png">
           </div>
-        </div>
+          <div class="comment_body">
+            <p>{{comment.comment}}</p>
+          </div>
+          <div class="comment_toolbar">
+            <div class="comment_details">
+              <ul>
+
+                <li><i class="fa fa-calendar"></i> {{comment.date}}</li>
+                <li><i class="fa fa-pencil"></i> <span class="user">{{comment.personName}}
+                    {{comment.personLastName}}</span></li>
+              </ul>
+            </div>
+            <div class="comment_tools">
+              <ul>
+                <li><i (click)="openSmallModal(smallModalContent,comment.commentID) " [hidden]="comment.isDeletable == false" class="fa fa-remove"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </ul>
       </div>
     </div>
   </div>
