refactor: remove card border in detail page

--- a/src/app/advert-detail/advert-detail.component.html
+++ b/src/app/advert-detail/advert-detail.component.html
@@ -33,8 +33,7 @@
         <br>
         <div class="row" style="justify-content: center;">
           <div style="width: 100%; text-align: left;" class="card">
-            <div style=" border: 1px solid gray;
-            border-radius: 5px;" class="card-body">
+            <div class="card-body">
               <b>
                 <h4 class="card-title">Explanation</h4>
               </b>
@@ -46,8 +45,7 @@
         <div class="row" style="justify-content: center;">
           <div class="col-lg-4" style="margin-top: 10px;">
             <div class="card"  style="width: 91%;" >
-              <div style=" border: 1px solid gray;
-              border-radius: 5px;" class="card-body">
+              <div class="card-body">
                 <b>
                   <h4 class="card-title">Animal Informations</h4>
                 </b>
@@ -59,8 +57,7 @@
           </div>
           <div class="col-lg-4" style="margin-top: 10px;">
             <div class="card" style="width: 91%;">
-              <div style=" border: 1px solid gray;
-              border-radius: 5px;" class="card-body">
+              <div class="card-body">
                 <b>
                   <h4 class="card-title">Owner Informations</h4>
                 </b>
@@ -73,8 +70,7 @@
           </div>
           <div class="col-lg-4" style="margin-top: 10px;">
             <div class="card" style="width: 91%;">
-              <div style=" border: 1px solid gray;
-              border-radius: 5px;" class="card-body">
+              <div class="card-body">
                 <b>
                   <h4 class="card-title">Adress Informations</h4>
                 </b>
