--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,17 +9,21 @@
       <span class="mdi mdi-menu"></span>
     </button>
 
+    
     <ul class="navbar-nav navbar-nav-right">
+      
       <li class="nav-item nav-profile dropdown" ngbDropdown>
         <a class="nav-link dropdown-toggle" id="profileDropdown" ngbDropdownToggle>
-          <div class="nav-profile-img">
-            <img src="https://img.icons8.com/bubbles/2x/user-male.png" alt="image">
-            <span class="availability-status online"></span>
+          
+          <div style="text-align:center ">
+            <span class="avatar" [style.background-color]="color"><p class="avatarText">{{avatarText}}</p></span>
           </div>
           <div class="nav-profile-text">
+            
             <p class="mb-1 text-black">{{name}} {{surname}}</p>
           </div>
         </a>
+        
         <div class="dropdown-menu navbar-dropdown" ngbDropdownMenu aria-labelledby="profileDropdown">
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="/user-pages/login">
