--- a/src/app/update-account/update-account.component.html
+++ b/src/app/update-account/update-account.component.html
@@ -1,39 +1,95 @@
 <div class="page-header">
-    <h3 class="page-title">
-      Account
-    </h3>
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink="/advert">Account</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Update Account</li>
-      </ol>
-    </nav>
-  </div>
-  <div class="col-12 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Update Account</h4>
-        <form class="forms-sample">
-          <div class="form-group">
-            <label for="exampleInputName1">Name</label>
-            <input type="text" value="{{model['data'].personName}}" class="form-control" #name >  
-          </div>
-          <div class="form-group">
-            <label for="exampleInputName1">Surname</label>
-            <input type="text" value="{{model['data'].personLastName}}" class="form-control" #surname >  
-          </div>
-          <div class="form-group">
-            <label for="exampleInputName1">Email</label>
-            <input type="text" value="{{model['data'].personEmail}}" class="form-control" #email  disabled>  
-          </div>
-          <div class="form-group">
-            <label for="exampleInputName1">Phone Number</label>
-            <input type="numeric" value="{{model['data'].personPhone}}" class="form-control" #phoneNumber>
-          </div>
-          <button type="submit" class="btn btn-gradient-primary mr-2" (click)="onUpdate(name.value,surname.value,phoneNumber.value)">Update</button>
-          <button routerLink="/dashboard" class="btn btn-light">Cancel</button>
-        </form>
-      </div>
+  <h3 class="page-title">
+    Account
+  </h3>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a routerLink="/advert">Account</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Update Account</li>
+    </ol>
+  </nav>
+</div>
+<div class="col-12 grid-margin stretch-card">
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Update Account</h4>
+      <form class="forms-sample">
+        <div class="form-group">
+          <label for="exampleInputName1">Name</label>
+          <input type="text" value="{{model['data'].personName}}" class="form-control" #name >  
+        </div>
+        <div class="form-group">
+          <label for="exampleInputName1">Surname</label>
+          <input type="text" value="{{model['data'].personLastName}}" class="form-control" #surname >  
+        </div>
+        <div class="form-group">
+          <label for="exampleInputName1">Email</label>
+          <input type="text" value="{{model['data'].personEmail}}" class="form-control" #email  disabled>  
+        </div>
+        <div class="form-group">
+          <label for="exampleInputName1">Phone Number</label>
+          <input type="text" name="input-phone"  value="{{model['data'].personPhone}}" class="form-control" #phoneNumber>
+        </div>
+        <button type="submit" class="btn btn-gradient-primary mr-2" (click)="onUpdate(name.value,surname.value,phoneNumber.value)">Update</button>
+        <button routerLink="/dashboard" class="btn btn-light">Cancel</button>
+      </form>
     </div>
   </div>
-  
+</div>
+
+<div class="col-12 grid-margin stretch-card">
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Update Password</h4>
+      <form class="forms-sample">
+        <div class="form-group">
+          <div class="field">
+            <div class="ui icon input" style="width: 50%;padding-top: 3px;">
+              <input type="password" id="oldPassword" placeholder="Current Password" class="form-control" #oldPassword >  
+            <i class="circular eye link icon" onclick="toggleOldPassword()"></i>
+            </div>
+          </div>
+        </div>
+        
+        <!-- Password input-->
+        <div class="form-group">
+          <div class="field">
+            <div class="ui icon input" style="width: 50%;padding-top: 3px;">
+              <input id="password" name="password" type="password" #password placeholder="New Password"
+                class="form-control input-md" data-toggle="popover" data-container="body" data-html="true"> <i
+                class="circular eye link icon" onclick="togglePassword()"></i>
+            </div>
+          </div>
+          <div id="popover-password" style="margin-top: 5px;">
+            <p>Password Strength: <span id="result"> </span></p>
+            <div class="progress" style ="width:50%">
+              <div id="password-strength"  class="progress-bar progress-bar-success" role="progressbar"
+                aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+              </div>
+            </div>
+            <ul class="list-unstyled" style="margin-top: 5px;">
+              <li class=""><span class="low-upper-case"><i class="fa fa-file-text"
+                    aria-hidden="true"></i></span>&nbsp; 1 lowercase &amp; 1 uppercase</li>
+              <li class=""><span class="one-number"><i class="fa fa-file-text" aria-hidden="true"></i></span> &nbsp;1
+                number (0-9)</li>
+              <li class=""><span class="one-special-char"><i class="fa fa-file-text" aria-hidden="true"></i></span>
+                &nbsp;1 Special Character (!@#$%^&*).</li>
+              <li class=""><span class="eight-character"><i class="fa fa-file-text"
+                    aria-hidden="true"></i></span>&nbsp; Atleast 8 Character</li>
+            </ul>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="field">
+            <div class="ui icon input" style="width: 50%;padding-top: 3px;">
+              <input type="password" id="confirmationPassword" placeholder="Password Confirmation"  class="form-control" #confirmationPassword>
+            <i class="circular eye link icon" onclick="toggleConfirmationPassword()"></i>
+            </div>
+          </div>
+        </div>
+        
+        <button type="submit" disabled="disabled" id="btnUpdatePassword" class="btn btn-gradient-primary mr-2" (click)="onUpdatePsw(password.value,confirmationPassword.value,oldPassword.value)">Password Update</button>
+      </form>
+    </div>
+  </div>
+</div>
