--- a/src/app/user-pages/register/register.component.html
+++ b/src/app/user-pages/register/register.component.html
@@ -19,7 +19,7 @@
             <input type="email" #email class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
           </div>
           <div class="form-group">
-            <input type="text" #number class="form-control form-control-lg" id="exampleInputPhone" name="input-phone"
+            <input type="text" #number class="form-control form-control-lg" name="input-phone"
               placeholder="Phone">
           </div>
 
@@ -27,7 +27,7 @@
           <div class="form-group">
             <div class="field">
               <div class="ui icon input" style="width: 100%;padding-top: 3px;">
-                <input id="password" name="password" type="password" #password placeholder="Password"
+                <input id="password"  type="password" #password placeholder="Password"
                   class="form-control input-md" data-toggle="popover" data-container="body" data-html="true"> <i
                   class="circular eye link icon" onclick="togglePassword()"></i>
               </div>
@@ -52,8 +52,8 @@
             </div>
           </div>
           <div class="mt-3">
-            <button id="sign-up" disabled="disabled" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
-              (click)="onRegister(name.value,lastname.value,number.value,email.value,password.value)">SIGN UP</button>
+            <a id="sign-up" [class.disabled]="true" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
+              (click)="onRegister(name.value,lastname.value,number.value,email.value,password.value)">SIGN UP</a>
           </div>
           <div class="text-center mt-4 font-weight-light">
             Already have an account? <a routerLink="/user-pages/login" class="text-primary">Login</a>
