feat: added advert add image format check

--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -33,7 +33,7 @@
         <div class="form-group">
           <label>Animal Photo</label>
           <div class="input-group col-xs-12">
-            <input #imageInput type="file" accept="image/*" class="form-control file-upload-info"
+            <input #imageInput type="file" accept="image/png, image/jpeg" class="form-control file-upload-info"
               placeholder="Upload Image">
             <span class="input-group-append">
               <button class="file-upload-browse btn btn-gradient-primary" (click)="handleFileInput(imageInput)"
