feat: added account blocking for login screen

--- a/src/app/user-pages/newpassword/newpassword.component.html
+++ b/src/app/user-pages/newpassword/newpassword.component.html
@@ -27,13 +27,9 @@
           <div class="text-center mt-4 font-weight-light">
             Already have an account? <a routerLink="/user-pages/login" class="text-primary">Login</a>
           </div>
-
-          <div id="alert" class="alert alert-fill-danger"  *ngIf="error.message">
-            <i class="mdi mdi-information-outline"></i>
-            <span id="message" >{{error.message}}</span>
-          </div>
         </form>
       </div>
     </div>
   </div>
 </div>
+<notifier-container></notifier-container>
