--- a/src/app/user-pages/login/login.component.html
+++ b/src/app/user-pages/login/login.component.html
@@ -25,12 +25,9 @@
           <div class="text-center mt-4 font-weight-light">
             Don't have an account? <a routerLink="/user-pages/register" class="text-primary">Create</a>
           </div>
-          <div id="alert" class="alert alert-fill-danger"  *ngIf="error.message">
-            <i class="mdi mdi-information-outline"></i>
-            <span id="message" >{{error.message}}</span>
-          </div>
         </form>
       </div>
     </div>
   </div>
 </div>
+<notifier-container></notifier-container>
