--- a/src/app/advert-detail/advert-detail.component.scss
+++ b/src/app/advert-detail/advert-detail.component.scss
@@ -262,3 +262,25 @@ body {
 		}
 	}
 }
+
+
+
+
+#like{
+	width: 30px;
+	height:30px; 
+	background-color:white;
+	border-color: white;
+}
+
+.like{
+	height: 15px;
+	width: 15px; 
+	color:#f24b6d
+}
+
+.dislike{
+	height: 15px;
+	width: 15px; 
+	color:#b3b1b1
+}
