--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -32,12 +32,11 @@
         <i class="mdi mdi mdi-book-open-variant menu-icon"></i>
       </a>
     </li>
-    <li class="nav-item" [ngClass]="{ 'active': advert.isActive }">
-      <a class="nav-link" routerLink="/favorite" routerLinkActive #advert="routerLinkActive">
+    <li class="nav-item" [ngClass]="{ 'active': favorite.isActive }">
+      <a class="nav-link" routerLink="/favorite" routerLinkActive #favorite="routerLinkActive">
         <span class="menu-title">Favorite</span>
-        <i class="mdi mdi mdi-book-open-variant menu-icon"></i>
+        <i class="mdi mdi mdi-star menu-icon"></i>
       </a>
     </li>
-
   </ul>
 </nav>
